[tool.poetry]
name = "mft-onnx"
version = "0.1.0"
description = ""
authors = ["yumion <a.yamada0703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.1.3"
einops = "^0.8.0"
tqdm = "^4.67.0"
opencv-python = "^4.10.0.84"
scipy = "^1.14.1"
pillow = "9"
matplotlib = "^3.9.2"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
